# timbre

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  reference.md
scripts/: gen_docs.py
tests/: test_api.py  test_db_api.py  test_docs.py  test_escalation.py  test_loop_context.py  test_name_classify.py  test_recognize.py  test_server.py  test_store.py  test_taxonomy.py
timbre/: __init__.py  api.py  audio_analysis.py  cli.py  config.py  errors.py  names.py  server.py  store.py
timbre/recognize/: __init__.py  ace_step.py  captioner.py  clap.py  heuristic.py  registry.py  types.py
timbre/ui/: index.html
