[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timbre"
version = "0.1.0"
description = "Content + filename based audio sample classifier (API, CLI, and HTTP server)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# `--backend clap` — local zero-shot audio-text embedding.
clap = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "torchvision>=0.15",
    "laion-clap>=1.1",
]
# `--backend ace-step` — local ACE-Step captioner (Qwen2.5-Omni multimodal).
# transformers is capped below 5: the 5.x image-processor registry dropped the
# `Qwen2VLImageProcessor` string mapping the acestep-captioner checkpoint needs,
# so its processor fails to load. pillow + torchvision are pulled because the
# Qwen2.5-Omni processor instantiates image/video sub-components even though the
# captioning path only uses audio.
ace-step = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.52,<5",
    "pillow>=9",
]
# In-flight quantization for the ace-step captioner (`ACESTEP_CAPTIONER_LOAD`,
# default `4bit`). Strongly recommended on CUDA: the full ~22 GB load maxes a
# 24 GB card and (notably under WSL2) spills to system RAM, ~15x slower; 4bit
# (~7 GB) stays resident. CUDA-only (bitsandbytes needs an NVIDIA GPU) — when
# absent, the captioner auto-falls back to full precision with a warning.
quant = [
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
]
# Contributor tooling: test runner + the pre-commit hook that regenerates
# docs/reference.md (see .pre-commit-config.yaml).
dev = [
    "pytest>=7",
    "pre-commit>=3",
]

[project.scripts]
timbre = "timbre.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["timbre"]

[tool.hatch.build.targets.wheel.force-include]
"timbre/ui/index.html" = "timbre/ui/index.html"
